--- a/CvBerkaySezer/Web.config
+++ b/CvBerkaySezer/Web.config
@@ -15,7 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="Context" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=DbCvBerkaySezer;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="Context1" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=DbCvBerkaySezer;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="Context" connectionString="Data Source=localhost\MSSQLSERVER01;Initial Catalog=DbCvBerkaySezer;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
