--- a/CvBerkaySezer/Web.config
+++ b/CvBerkaySezer/Web.config
@@ -15,12 +15,15 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="Context" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=DbCvBerkaySezer;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="Context1" connectionString="Data Source=localhost\MSSQLSERVER01;Initial Catalog=DbCvBerkaySezer;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="Context1" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=DbCvBerkaySezer;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="Context" connectionString="Data Source=localhost\MSSQLSERVER01;Initial Catalog=DbCvBerkaySezer;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
+    <authentication mode="Forms">
+      <forms loginUrl="/Admin/Login"></forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
