--- a/CvBerkaySezer/Web.config
+++ b/CvBerkaySezer/Web.config
@@ -19,6 +19,11 @@
     <add name="Context1" connectionString="Data Source=localhost\MSSQLSERVER01;Initial Catalog=DbCvBerkaySezer;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+	  <customErrors mode="On">
+		  <error statusCode="404" redirect="/Error/Page404"/>
+		  <error statusCode="500" redirect="/Error/Page500"/>
+		  <error statusCode="403" redirect="/Error/Page403"/>
+	  </customErrors>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
     <authentication mode="Forms">
