--- a/CvBerkaySezer/CvBerkaySezer.csproj
+++ b/CvBerkaySezer/CvBerkaySezer.csproj
@@ -146,9 +146,11 @@
     <Compile Include="Models\Client.cs" />
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Models\Content.cs" />
+    <Compile Include="Models\Hosting.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Context.cs" />
     <Compile Include="Models\Service.cs" />
+    <Compile Include="Models\ServiceProvider.cs" />
     <Compile Include="Models\Skill.cs" />
     <Compile Include="Models\Title.cs" />
     <Compile Include="Models\User.cs" />
@@ -157,7 +159,9 @@
     <Compile Include="Repositories\ContactRepository.cs" />
     <Compile Include="Repositories\ContentRepository.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\HostingRepository.cs" />
     <Compile Include="Repositories\ProjectRepository.cs" />
+    <Compile Include="Repositories\ServiceProviderRepository.cs" />
     <Compile Include="Repositories\ServiceRepository.cs" />
     <Compile Include="Repositories\SkillRepository.cs" />
     <Compile Include="Repositories\TitleRepository.cs" />
